--- a/yttc/server/package.json
+++ b/yttc/server/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.839.0",
     "googleapis": "^67.0.0"
   },
   "devDependencies": {
+    "serverless": "^2.22.0",
     "serverless-offline": "^6.8.0"
   }
 }
